Работа на основным меню

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 	<!-- My styles -->
 	<link rel="stylesheet" href="css/style.css">
@@ -17,7 +20,55 @@
 	<title>Hello, world!</title>
 </head>
 <body>
-	<h1>Hello, world!</h1>
+	<header>
+		<div class="header-menu">
+			<div class="container">
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+						<span style="color: #fff; font-size: 1.2rem;">Российское Сварочное Профессиональное Сообщество</span>
+					</button> 
+					<!-- <span style="color: #fff; font-size: 1.2rem;">РСПС</span> -->
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item active">
+								<a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">О РСПС</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Новости</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Документы</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Отделения РСПС</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Контакты</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Одобрено РСПС</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">РО-02</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Выход</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+		</div>
+	</header>
+	<div class="container">
+		<h1>Hello, world!</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
+	</div>
+	
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
