--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	
 	<!-- Fonts -->
+	<link href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 	<!-- My styles -->
@@ -52,11 +53,11 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#">Одобрено РСПС</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">РО-02</a>
+							<li class="nav-item nav-item-user">
+								<a class="nav-link" href="#"><i class="fa fa-user mr-2"></i>РО-02</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Выход</a>
+							<li class="nav-item nav-item-user">
+								<a class="nav-link" href="#"><i class="fa fa-sign-out mr-2"></i>Выход</a>
 							</li>
 						</ul>
 					</div>
