--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+	<link rel="shortcut icon" href="images/favicon.ico">
+
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	
@@ -18,7 +20,7 @@
 	<!-- W3 -->
    	<script src="js/w3.js"></script>
 
-	<title>Hello, world!</title>
+	<title>РСПС-ЛК</title>
 </head>
 <body>
 	<header>
@@ -27,11 +29,11 @@
 				<nav class="navbar navbar-expand-lg navbar-light">
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
-						<span style="color: #fff; font-size: 1.2rem;">Российское Сварочное Профессиональное Сообщество</span>
+						<!-- <span class="d-inline-block d-sm-none" style="color: #fff; font-size: 1.2rem;">Меню</span> -->
 					</button> 
-					<!-- <span style="color: #fff; font-size: 1.2rem;">РСПС</span> -->
+
 					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav">
+						<ul class="navbar-nav mr-auto">
 							<li class="nav-item active">
 								<a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
 							</li>
@@ -45,7 +47,7 @@
 								<a class="nav-link" href="#">Документы</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Отделения РСПС</a>
+								<a class="nav-link" href="#">Региональные отделения</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">Контакты</a>
@@ -53,6 +55,8 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#">Одобрено РСПС</a>
 							</li>
+						</ul>
+						<ul class="navbar-nav">
 							<li class="nav-item nav-item-user">
 								<a class="nav-link" href="#"><i class="fa fa-user mr-2"></i>РО-02</a>
 							</li>
@@ -60,15 +64,43 @@
 								<a class="nav-link" href="#"><i class="fa fa-sign-out mr-2"></i>Выход</a>
 							</li>
 						</ul>
+						<ul class="navbar-nav d-none">
+							<li class="nav-item nav-item-user">
+								<a class="nav-link" href="#"><i class="fa fa-sign-in mr-2"></i>Личный кабинет</a>
+							</li>
+						</ul>
 					</div>
 				</nav>
 			</div>
 		</div>
+		<div class="header-content py-4">
+			<div class="container">
+				<div class="row align-items-center justify-content-between">
+					<div class="col-sm-3 col-md-2 col-lg-3 text-center text-sm-left">
+						<a href="http://rsps-online.ru/"><img src="images/logo.gif" class="img-fluid" alt="RSPS logo"></a>
+					</div>
+					<div class="d-none d-sm-block col-sm-9 col-md-7">
+						<h2>Российское сварочное профессиональное сообщество</h2>
+					</div>
+					<div class="d-sm-none d-md-block col-md-3 col-lg-2 text-center text-lg-right">
+						<p class="mb-1"><i class="fa fa-phone-square mr-2 mt-4 mt-sm-0 text-primary"></i>+7 (499) 784 77 00</p>
+						<p><i class="fa fa-fax mr-2 text-primary"></i>+7 (499) 784 77 11</p>
+					</div>
+					<!-- <div class="col-sm-3 text-center text-lg-right">
+						<p class="mb-1"><i class="fa fa-phone-square mr-2 mt-4 mt-sm-0 text-primary"></i>+7 (499) 784 77 00</p>
+						<p><i class="fa fa-fax mr-2 text-primary"></i>+7 (499) 784 77 11</p>
+					</div> -->
+				</div>
+			</div>
+		</div>
 	</header>
-	<div class="container">
-		<h1>Hello, world!</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
-	</div>
+	<main>
+		<div class="container">
+			<h1>Hello, world!</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
+		</div>
+	</main>
+	
 	
 
 	<!-- Optional JavaScript -->
