--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
 	<title>РСПС-ЛК</title>
 </head>
 <body>
+	<!-- Header -->
 	<header>
 		<div class="header-menu">
 			<div class="container">
 				<nav class="navbar navbar-expand-lg navbar-light">
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-						<!-- <span class="d-inline-block d-sm-none" style="color: #fff; font-size: 1.2rem;">Меню</span> -->
+						<span class="navbar-toggler-icon mr-3"></span>
+						<span class="d-inline-block d-lg-none" style="color: #fff; font-size: 1.2rem;">Меню</span>
 					</button> 
 
 					<div class="collapse navbar-collapse" id="navbarNav">
@@ -50,10 +51,10 @@
 								<a class="nav-link" href="#">Региональные отделения</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Контакты</a>
+								<a class="nav-link" href="#">Одобрено РСПС</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Одобрено РСПС</a>
+								<a class="nav-link" href="#">Контакты</a>
 							</li>
 						</ul>
 						<ul class="navbar-nav">
@@ -86,20 +87,67 @@
 						<p class="mb-1"><i class="fa fa-phone-square mr-2 mt-4 mt-sm-0 text-primary"></i>+7 (499) 784 77 00</p>
 						<p><i class="fa fa-fax mr-2 text-primary"></i>+7 (499) 784 77 11</p>
 					</div>
-					<!-- <div class="col-sm-3 text-center text-lg-right">
-						<p class="mb-1"><i class="fa fa-phone-square mr-2 mt-4 mt-sm-0 text-primary"></i>+7 (499) 784 77 00</p>
-						<p><i class="fa fa-fax mr-2 text-primary"></i>+7 (499) 784 77 11</p>
-					</div> -->
 				</div>
 			</div>
 		</div>
-	</header>
-	<main>
+	</header> <!-- End Header -->
+
+	<!-- Content -->
+	<main class="pt-4">
 		<div class="container">
 			<h1>Hello, world!</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat aut, quod corrupti molestias et nihil numquam culpa. Autem est tempora sunt ipsa soluta illo, atque, porro nulla, maiores, ullam neque.</p>
 		</div>
-	</main>
+	</main> <!-- End Content -->
+
+	<!-- Footer -->
+	<footer>
+		<div class="footer-menu py-4 py-sm-5">
+			<div class="container">
+				<ul class="nav nav-fill">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Главная</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">О РСПС</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Новости</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Документы</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Региональные отделения</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Одобрено РСПС</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Контакты</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<hr>
+		<div class="footer-content pt-3 pb-4">
+			<div class="container">
+				<div class="row align-items-center justify-content-between">
+					<div class="d-none d-sm-block col-sm-2">
+						<a href="http://rsps-online.ru/"><img src="images/logo.gif" class="img-fluid" alt="RSPS logo"></a>
+					</div>
+					<div class="col-sm-10 col-md-7 text-center text-sm-left">
+						<h6>Российское сварочное профессиональное сообщество, ©&nbsp;2013&nbsp;-&nbsp;2019</h6>
+					</div>
+					<div class="d-none d-md-block col-md-3 text-right">
+						<p class="mb-1"><i class="fa fa-phone-square mr-2 mt-4 mt-sm-0 text-primary"></i>+7 (499) 784 77 00</p>
+						<p><i class="fa fa-fax mr-2 text-primary"></i>+7 (499) 784 77 11</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- End Footer -->
 	
 	
 
